updated group chat feature